add CRUD for birthdays and modify db structure slightly
